// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip bidirectional binding should be supported 1`] = `
<div class="container">
  <div class="fect-tooltip"> Test Data </div>
  <!--teleport start-->
  <!--teleport end-->
  <div class="fect-teleport">
    <!---->
    <transition-stub>
      <div class="fect-tooltip__content fect-tooltip__content--default" role="popup" style="position: absolute; left: 0px; top: -12px; margin: 0px;" data-popper-reference-hidden="" data-popper-escaped="" data-popper-placement="top"><span class="fect-tooltip__arrow fect-tooltip__arrow--default"></span>
        <div class="fect-tooltip__inner">testinfo</div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`Tooltip should be support slots content 1`] = `
<div class="fect-tooltip">
  <!---->
</div>
<!--teleport start-->
<!--teleport end-->
`;
